[Mac RTL] Fix text alignment in the security bubble.

BUG=693303
TEST=as in bug

Review-Url: https://codereview.chromium.org/2702683002
Cr-Commit-Position: refs/heads/master@{#451232}

Former-commit-id: 4ba96148ab4fea7ae4f535c7e7bfdb37d9daf027